--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,7 @@
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
         /* Advanced Options */
+        // "suppressImplicitAnyIndexErrors": true,
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     }
 }
